# trading-platform1

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.nix  test_socket.py  users.csv
attached_assets/: Pasted--Nueva-vela-recibida-Object-time-1738766580-open-98913-9-high-98980-1-low-98911-7-close--1738766677908.txt  Pasted--Nueva-vela-recibida-Object-time-1738767360-open-98388-5-high-98431-8-low-98328-1-close--1738767446119.txt  Pasted-1-Asignaci-n-de-rol-Eres-un-asistente-experto-en-programaci-n-de-herramientas-para-trading-de-crip-1738683075691.txt  Pasted-Resumen-parcial-para-BTCUSDT-depth-cache-BTCUSDT-est-sincronizado-True-r-n-top-asks--1739382190505.txt  Pasted-c-Renderiza-las-barras-horizontales-en-el-contenedor-lateral-Dado-que-Lightweight-Charts-no-dibuja-1738720976463.txt  Pasted-from-unicorn-binance-local-depth-cache-import-BinanceLocalDepthCacheManager-DepthCacheOutOfSync-fro-1739216414051.txt  Pasted-ueva-vela-recibida-Object-time-1738766520-open-99024-2-high-99124-2-low-98970-close-9898-1738766568900.txt  index.html  inx.html  oraculo2.py  oraculo2n.py  server.js
attached_assets/src/: main.js  style.css
client/src/: App.tsx
client/src/components/: TutorialsDrawer.tsx  theme-provider.tsx
client/src/hooks/: use-auth.ts  use-auth.tsx  use-market-data.ts  use-socket-io.ts  useCryptoData.ts
client/src/lib/: binance-funding-service.ts  bingx-service.ts  (+9 more)
server/: auth.ts  binx-client.ts  index.ts  market-simulator.ts  routes.ts  server.js  socket-server.ts  storage.ts
server/routes/: bingx.ts
shared/: schema.ts
(+14 files in other folders)
